# graphCRNs

./: .gitignore  README.md  TODO.md  dummy.csv  install  model_performance  pyproject.toml  rates.ipy  setup.py
gcrn/: __init__.py  dynamics.py  graphs.py  helper_functions.py  matrices.py  network.py  pathfinding.py  profiling.py  prototyping.py  reaction.py  timescales.py  utilities.py
gcrn.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
graphCRN.egg-info/: PKG-INFO  SOURCES.txt
graphcrn.egg-info/: PKG-INFO  SOURCES.txt
julia/: arg_test.jl  benchmark_solvers.jl  catalyst_intro.jl  catalyst_timing.jl  check_rho_T_output.py  co_test.jl  diagnostics.md  julia_comparison.py  lorenz.jl  models_to_run  mwe.jl  precompile.jl  prototyping.jl  rho_T_output.py  run  run.sh  run_jcrn.jl  speed_check.py  test.py  user_defined_mwe.jl
res/: L-shape.ntw  T-network  catalyst_co.ntw  ch_oh_co.ntw  cno.ntw  cno_extra.ntw  cno_fix.ntw  co_dummy.ntw  co_test.ntw  diamond-network.ntw  mass_action.ntw  mp_cno.ntw  multi-species-line  photo.ntw  quad-ring-reaction.ntw  react-co-solar-umist12  react-co-solar-umist12-limits  react-solar-umist12  reverse  reverse-3  ring.ntw  ring_single.ntw  ring_temperature.ntw  simplified_co.ntw  solar_co_w05.ntw  solar_co_w05_4097.ntw  solar_co_w05_h2_mod.ntw
scripts/: abundances.py  co_profile.txt  compare_networks.py  create_diagram.py  dynamics_test.py  eqm_time.py  limits.py  make_dfs.py  make_vtks.py  model_predictions.txt  neural_prototyping.py  nn_gt_predict.py  nn_models.py  pathfinding_test.py  pfa.py  photochemistry.py  profile.txt  (+8 more)
(+52 files in other folders)
